k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: hashicorp/http-echo
        args: ["-text=foo"]
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: hashicorp/http-echo
        args: ["-text=bar"]
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: bar
